force-app/main/default/objects/sfpegProfile__mdt/sfpegProfile__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to store a configuration of the sfpegProfiletCmp LWC component.
It contains the detailed layout of the component and actions to be displayed.</description>
    <label>sfpegProfile</label>
    <pluralLabel>sfpegProfiles</pluralLabel>
</CustomObject>