force-app/main/default/objects/sfpegProfile__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short Description of the configuration record and its use cases (for documentation)</description>
    <inlineHelpText>Short Description of the configuration record and its use cases (for documentation</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>