force-app/main/default/objects/sfpegProfile__mdt/fields/ProfileActions__c.field-meta.xml
<CustomField>
    <fullName>ProfileActions__c</fullName>
    <description>Configuration of the Actions displayed in the action bar between header and details (should be a sfpegAction record name)</description>
    <inlineHelpText>Configuration of the Actions displayed in the action bar between header and details  (should be a sfpegAction record name)</inlineHelpText>
    <label>Profile Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>