force-app/main/default/objects/sfpegProfile__mdt/fields/ProfileBanner__c.field-meta.xml
<CustomField>
    <fullName>ProfileBanner__c</fullName>
    <description>Headline banner image of the profile component (image file path within the sfpegBanner static resource)</description>
    <inlineHelpText>Headline banner image of the profile component (image file path within the sfpegBanner static resource)</inlineHelpText>
    <label>Profile Banner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>