force-app/main/default/objects/sfpegProfile__mdt/fields/ProfileDetails__c.field-meta.xml
<CustomField>
    <fullName>ProfileDetails__c</fullName>
    <description>Configuration of the list of fields to be displayed in the Details section</description>
    <inlineHelpText>Configuration of the list of fields to be displayed in the Details section</inlineHelpText>
    <label>Profile Details</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>