force-app/main/default/objects/sfpegProfile__mdt/fields/ProfileHeader__c.field-meta.xml
<CustomField>
    <fullName>ProfileHeader__c</fullName>
    <description>Configuration of the header content (background, avatar, badge, title and header details)</description>
    <inlineHelpText>Configuration of the header content (background, avatar, badge, title and header details)</inlineHelpText>
    <label>Profile Header</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>